Hide animation may have changed the transform, when recreating layer if we don't reset the transform, the installed transform from last hiding animation (such as a closing window operation) will cause window bounds changed.

BUG=602661
TEST=add unittest in visibility_controller

Review-Url: https://codereview.chromium.org/1986963003
Cr-Commit-Position: refs/heads/master@{#394340}

Former-commit-id: ac95109db90a079c1d56bc61b5a2b27b2b2fae63